build/log/idf_py_stdout_output_226640
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/action.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/action.c.obj 
/home/vlev/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-277-gc8243465e4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/vlev/Documents/Github/esp32-mbot/esp32/build/config -I/home/vlev/Documents/Github/esp32-mbot/esp32/main -I/home/vlev/esp/esp-idf/components/newlib/platform_include -I/home/vlev/esp/esp-idf/components/freertos/config/include -I/home/vlev/esp/esp-idf/components/freertos/config/include/freertos -I/home/vlev/esp/esp-idf/components/freertos/config/xtensa/include -I/home/vlev/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/vlev/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/vlev/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/vlev/esp/esp-idf/components/freertos/esp_additions/include -I/home/vlev/esp/esp-idf/components/esp_hw_support/include -I/home/vlev/esp/esp-idf/components/esp_hw_support/include/soc -I/home/vlev/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/vlev/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/vlev/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/vlev/esp/esp-idf/components/heap/include -I/home/vlev/esp/esp-idf/components/log/include -I/home/vlev/esp/esp-idf/components/soc/include -I/home/vlev/esp/esp-idf/components/soc/esp32 -I/home/vlev/esp/esp-idf/components/soc/esp32/include -I/home/vlev/esp/esp-idf/components/hal/platform_port/include -I/home/vlev/esp/esp-idf/components/hal/esp32/include -I/home/vlev/esp/esp-idf/components/hal/include -I/home/vlev/esp/esp-idf/components/esp_rom/include -I/home/vlev/esp/esp-idf/components/esp_rom/include/esp32 -I/home/vlev/esp/esp-idf/components/esp_rom/esp32 -I/home/vlev/esp/esp-idf/components/esp_common/include -I/home/vlev/esp/esp-idf/components/esp_system/include -I/home/vlev/esp/esp-idf/components/esp_system/port/soc -I/home/vlev/esp/esp-idf/components/esp_system/port/include/private -I/home/vlev/esp/esp-idf/components/xtensa/esp32/include -I/home/vlev/esp/esp-idf/components/xtensa/include -I/home/vlev/esp/esp-idf/components/xtensa/deprecated_include -I/home/vlev/esp/esp-idf/components/lwip/include -I/home/vlev/esp/esp-idf/components/lwip/include/apps -I/home/vlev/esp/esp-idf/components/lwip/include/apps/sntp -I/home/vlev/esp/esp-idf/components/lwip/lwip/src/include -I/home/vlev/esp/esp-idf/components/lwip/port/include -I/home/vlev/esp/esp-idf/components/lwip/port/freertos/include -I/home/vlev/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/vlev/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/vlev/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/vlev/esp/esp-idf/components/esp_http_server/include -I/home/vlev/esp/esp-idf/components/http_parser -I/home/vlev/esp/esp-idf/components/esp_event/include -I/home/vlev/esp/esp-idf/components/esp_wifi/include -I/home/vlev/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/vlev/esp/esp-idf/components/esp_phy/include -I/home/vlev/esp/esp-idf/components/esp_phy/esp32/include -I/home/vlev/esp/esp-idf/components/esp_netif/include -I/home/vlev/esp/esp-idf/components/esp_eth/include -I/home/vlev/esp/esp-idf/components/driver/include -I/home/vlev/esp/esp-idf/components/driver/deprecated -I/home/vlev/esp/esp-idf/components/driver/analog_comparator/include -I/home/vlev/esp/esp-idf/components/driver/dac/include -I/home/vlev/esp/esp-idf/components/driver/i2c/include -I/home/vlev/esp/esp-idf/components/driver/i2s/include -I/home/vlev/esp/esp-idf/components/driver/ledc/include -I/home/vlev/esp/esp-idf/components/driver/mcpwm/include -I/home/vlev/esp/esp-idf/components/driver/parlio/include -I/home/vlev/esp/esp-idf/components/driver/rmt/include -I/home/vlev/esp/esp-idf/components/driver/sdio_slave/include -I/home/vlev/esp/esp-idf/components/driver/sdmmc/include -I/home/vlev/esp/esp-idf/components/driver/sigma_delta/include -I/home/vlev/esp/esp-idf/components/driver/spi/include -I/home/vlev/esp/esp-idf/components/driver/temperature_sensor/include -I/home/vlev/esp/esp-idf/components/driver/touch_sensor/include -I/home/vlev/esp/esp-idf/components/driver/twai/include -I/home/vlev/esp/esp-idf/components/driver/uart/include -I/home/vlev/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/vlev/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/vlev/esp/esp-idf/components/esp_pm/include -I/home/vlev/esp/esp-idf/components/esp_ringbuf/include -I/home/vlev/esp/esp-idf/components/esp_driver_gpio/include -I/home/vlev/esp/esp-idf/components/esp_driver_pcnt/include -I/home/vlev/esp/esp-idf/components/esp_driver_gptimer/include -I/home/vlev/esp/esp-idf/components/nvs_flash/include -I/home/vlev/esp/esp-idf/components/spi_flash/include -I/home/vlev/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/vlev/Documents/Github/esp32-mbot/esp32=. -fmacro-prefix-map=/home/vlev/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/action.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/action.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/action.c.obj -c /home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c
In file included from /home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c:3:
/home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c: In function 'mbot_configure_led':
/home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c:8:14: error: 'TAG' undeclared (first use in this function)
    8 |     ESP_LOGI(TAG, "Example configured to blink GPIO LED!");
      |              ^~~
/home/vlev/esp/esp-idf/components/log/include/esp_log.h:436:81: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/vlev/esp/esp-idf/components/log/include/esp_log.h:368:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  368 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c:8:5: note: in expansion of macro 'ESP_LOGI'
    8 |     ESP_LOGI(TAG, "Example configured to blink GPIO LED!");
      |     ^~~~~~~~
/home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c:8:14: note: each undeclared identifier is reported only once for each function it appears in
    8 |     ESP_LOGI(TAG, "Example configured to blink GPIO LED!");
      |              ^~~
/home/vlev/esp/esp-idf/components/log/include/esp_log.h:436:81: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/vlev/esp/esp-idf/components/log/include/esp_log.h:368:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  368 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/vlev/Documents/Github/esp32-mbot/esp32/main/action.c:8:5: note: in expansion of macro 'ESP_LOGI'
    8 |     ESP_LOGI(TAG, "Example configured to blink GPIO LED!");
      |     ^~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/vlev/Documents/Github/esp32-mbot/esp32/build/bootloader/esp-idf/esptool_py && /home/vlev/.espressif/python_env/idf5.3_py3.11_env/bin/python /home/vlev/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/vlev/Documents/Github/esp32-mbot/esp32/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
ninja: build stopped: subcommand failed.
